Refs #8536; Fixed alignement - top menu/breadcrumbs/page title

--- a/trunk/eea.design/branches/plone4/eea/design/skins/eeadesign_cms/ploneAdmin.css
+++ b/trunk/eea.design/branches/plone4/eea/design/skins/eeadesign_cms/ploneAdmin.css
@@ -21,7 +21,7 @@ body.mceContentBody {
 }
 
 #content {
-    padding: 0.5em;
+    padding: 0.5em 0;
 }
 
 .navTreeItem a, dd.portletItem .navTreeItem a {
